Bug 165080 - Background color cells are reset to white in LibreOffice25.2.0.3
Summary: Background color cells are reset to white in LibreOffice25.2.0.3
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.2.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.1
Keywords: bibisected, bisected, regression
: 165421 165457 (view as bug list)
Depends on:
Blocks: Calc-Cells
  Show dependency treegraph
 
Reported: 2025-02-06 14:56 UTC by VSA
Modified: 2025-02-26 12:00 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Affected file (146.50 KB, application/vnd.ms-excel)
2025-02-06 14:58 UTC, VSA
Details

Note You need to log in before you can comment on or make changes to this bug.
Description VSA 2025-02-06 14:56:14 UTC
Description:
Problem is in last version 25.2.0
Version 24.8.5.1 and oldes hven´t this problem.

Background colors cells is normaly grey, bud in new LibreOffice I see every only white. This any bug in open XLS format. Resetting buground to white?

Affected file for your diag: 
9AC4042_HK_VS_25.xls

Accesible On this link:
https://www.dropbox.com/scl/fi/uy5p2fyjofudgqop6ooa7/9AC4042_HK_VS_25.xls?rlkey=17kh1w5qxsqybk7fpittk7q6i&st=0fhc8nkw&dl=0


Actual Results:
Problen directli when I open XLS file.

Expected Results:
Keeping the color as it was in all older versions and in MS Office.


Reproducible: Always


User Profile Reset: No

Additional Info:
x
Comment 1 VSA 2025-02-06 14:58:03 UTC
Created attachment 199017 [details]
Affected file
Comment 2 Xisco Faulí 2025-02-06 15:23:55 UTC
Regression introduced by:

commit 2d208c4e42595bb85fd0ef726a89e10dd32b48b1	[log]
author	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Jun 25 09:03:49 2024 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Jun 25 11:53:31 2024 +0200
tree 1c4d98e99d36be3b3237d229e0aa412ee40bd98b
parent 87c81bb409cb5cd826eb21366a8e3222cb924ca1 [diff]

tdf#161210 speed xls load

Bisected with: linux64-25.2
Comment 3 BogdanB 2025-02-06 15:54:59 UTC
My colleagues were affected by this bug, but as I don't use xls format, I was not affected. It's very annoying, the tables are incorrect printed.
Comment 4 Commit Notification 2025-02-10 17:34:08 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c5f3e78f34a31077df6f9f8e3e9093454cdca25f

tdf#165080 Background color cells are reset to white

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-02-11 14:46:39 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/449b905f78737337eef8daff03a6342f96df845e

tdf#165080: sc_subsequent_filters_test2: Add unittest

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-02-11 21:30:22 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/cadfb0db14c6ff96688259b8a1eeb8615a2f8a49

tdf#165080 Background color cells are reset to white

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-02-18 11:01:08 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-2-1":

https://git.libreoffice.org/core/commit/1b2762e07aeb7c8acbb9dcf0a8bebfb502115e26

tdf#165080 Background color cells are reset to white

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2025-02-25 08:30:47 UTC
*** Bug 165421 has been marked as a duplicate of this bug. ***
Comment 9 Xisco Faulí 2025-02-26 12:00:52 UTC
*** Bug 165457 has been marked as a duplicate of this bug. ***