tdf#165080 Background color cells are reset to white

regression from
    commit 2d208c4e42595bb85fd0ef726a89e10dd32b48b1
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Tue Jun 25 09:03:49 2024 +0200
    tdf#161210 speed xls load

Change-Id: Ided4df0ce448cf811e7f43bcf601641e2b7c29c2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181350
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins